# email-triage-env

./: Dockerfile  README.md  README.md   app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_run_tasks.py
env/: data.py  environment.py  models.py
server/: app.py
tasks/: task_easy.py  task_hard.py  task_medium.py
