[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "A real-world email triage OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "numpy",
    "faker",
    "pytest",
    "python-dotenv",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:app"

[tool.openenv]
name = "email-triage-env"
version = "1.0.0"
tasks = ["easy", "medium", "hard"]